[build-system]
requires = [
    "setuptools>=61.0",
    "wheel",
    "numdifftools==0.9.41",
    "numpy==1.23.5",
    "SciPy==1.10.1",
    "sympy==1.11.1",
    "tensorflow==2.12.0rc1"
]
build-backend = "setuptools.build_meta"

[project]
name = "chiku"
version = "0.0.23"
authors = [
    { name="Devharsh Trivedi", email="devharsh@live.in" },
]
description = "A Python package for polynomial approximation of arbitrary functions."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://com.puter.tips/"
"Docs" = "https://com.puter.tips/"
"Bug Tracker" = "https://com.puter.tips/"
"repository" = "https://com.puter.tips/"
